chore: cleaning up some weirdness